update: Add mapToRequest to each models
update: Added documentation to each methods

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,4 +5,36 @@ include: package:flutter_lints/flutter.yaml
 
 analyzer:
   errors:
+    constant_identifier_names: ignore
     invalid_annotation_target: ignore
+    lines_longer_than_80_chars: error
+  exclude:
+    - "**.bottomsheets.dart"
+    - "**.dialogs.dart"
+    - "**.locator.dart"
+    - "**.locator.custom.dart"
+    - "**.router.dart"
+    - "**.logger.dart"
+    - "**.g.dart"
+    - "**.form.dart"
+    - "**.freezed.dart"
+    - "**.mocks.dart"
+    # - "**_test.dart"
+    - "**_helpers.dart"
+    - "**.md"
+
+linter:
+  rules:
+    public_member_api_docs: false
+    sort_constructors_first: true
+    annotate_overrides: true
+    always_use_package_imports: true
+    prefer_single_quotes: true
+    require_trailing_commas: true
+    unawaited_futures: true
+    prefer_const_constructors: true
+    always_put_required_named_parameters_first: true
+    unnecessary_overrides: true
+    combinators_ordering: true
+    no_leading_underscores_for_local_identifiers: true
+    use_super_parameters: true
