Update models with createdDate field

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -11,7 +11,7 @@ analyzer:
   exclude:
     - "**.bottomsheets.dart"
     - "**.dialogs.dart"
-    - "**.locator.dart"
+    - "**_locator.dart"
     - "**.locator.custom.dart"
     - "**.router.dart"
     - "**.logger.dart"
