--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: motocode_core
-description: "Core package for Skygo Motocode project"
-version: 0.2.0
+description: >
+  Motocode is a QR Code system for tracking spare parts and motorcycle products. It improves inventory accuracy and operational efficiency by enabling real-time tracking and reducing manual data entry.
+version: 0.2.1
 repository: https://github.com/skygoph/motocode_core
 
 environment:
